--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SushiSwap",
-  "name": "Farm SUSHI with Uniswap LP Tokens",
+  "short_name": "MOAR",
+  "name": "Farm MOAR with Uniswap LP Tokens",
   "icons": [
     {
       "src": "favicon.png",
