use homepage prop, update cname with www

--- a/www/package.json
+++ b/www/package.json
@@ -2,6 +2,7 @@
   "name": "yam",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://www.many.global",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
