--- a/www/package.json
+++ b/www/package.json
@@ -19,6 +19,7 @@
     "react-countdown": "^2.2.1",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
+    "react-fastclick": "^3.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
