--- a/www/package.json
+++ b/www/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yam",
+  "name": "many",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://www.many.global",
@@ -59,5 +59,9 @@
     "trailingComma": "all",
     "semi": false,
     "singleQuote": true
-  }
+  },
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
