--- a/www/package.json
+++ b/www/package.json
@@ -25,7 +25,8 @@
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7",
     "use-wallet": "^0.8.0",
-    "web3": "^1.2.11"
+    "web3": "^1.2.11",
+    "web3-utils": "^1.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start --no-cache",
