--- a/www/package.json
+++ b/www/package.json
@@ -36,7 +36,24 @@
     "deploy": "yarn build && cp ./build/index.html ./build/200.html && surge ./build sushiswap.org"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "eslint:recommended"
+    ],
+    "rules": {
+      "semi": [
+        "error",
+        "always"
+      ],
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "indent": [
+        "error",
+        2
+      ]
+    }
   },
   "browserslist": {
     "production": [
@@ -61,7 +78,8 @@
   "prettier": {
     "trailingComma": "all",
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "tabWidth": 2
   },
   "main": "index.js",
   "author": "",
