[MAINTAINABILITY]: renamed nft to nft details

--- a/www/package.json
+++ b/www/package.json
@@ -43,7 +43,7 @@
     "rules": {
       "semi": [
         "error",
-        "always"
+        "never"
       ],
       "quotes": [
         "error",
