--- a/www/package.json
+++ b/www/package.json
@@ -2,7 +2,7 @@
   "name": "many",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://www.many.global",
+  "homepage": "https://many.global",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
@@ -21,7 +21,7 @@
     "react-dom": "^16.13.1",
     "react-fastclick": "^3.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7",
     "use-wallet": "^0.8.0",
@@ -33,10 +33,7 @@
     "build": "CI= GENERATE_SOURCEMAP=false react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "deploy": "yarn build && cp ./build/index.html ./build/200.html && surge ./build sushiswap.org"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "lint": "eslint src/**"
   },
   "browserslist": {
     "production": [
@@ -55,13 +52,24 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.2",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "babel-eslint": "10.x",
     "customize-cra": "^1.0.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "4.x",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "react-app-rewired": "^2.1.6"
   },
   "prettier": {
     "trailingComma": "all",
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "tabWidth": 2
   },
   "main": "index.js",
   "author": "",
