--- a/www/package.json
+++ b/www/package.json
@@ -9,11 +9,12 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@types/debounce": "^1.2.0",
     "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.27",
+    "@types/node": "^14.11.8",
     "@types/react": "^16.9.46",
     "bignumber.js": "^9.0.0",
     "customize-cra": "^1.0.0",
     "debounce": "^1.2.0",
+    "ipfs-http-client": "^47.0.1",
     "numeral": "^2.0.6",
     "react": "^16.13.1",
     "react-circular-progressbar": "^2.0.3",
