--- a/www/package.json
+++ b/www/package.json
@@ -20,6 +20,7 @@
     "react-countdown": "^2.2.1",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.0",
     "react-fastclick": "^3.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
