--- a/www/package.json
+++ b/www/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^26.0.9",
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.46",
+    "axios": "^0.20.0",
     "bignumber.js": "^9.0.0",
     "customize-cra": "^1.0.0",
     "debounce": "^1.2.0",
