--- a/www/package.json
+++ b/www/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start --no-cache",
-    "build": "CI= GENERATE_SOURCEMAP=false react-app-rewired build",
+    "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
