--- a/www/package.json
+++ b/www/package.json
@@ -9,8 +9,9 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@types/debounce": "^1.2.0",
     "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.27",
+    "@types/node": "^14.11.8",
     "@types/react": "^16.9.46",
+    "axios": "^0.20.0",
     "bignumber.js": "^9.0.0",
     "customize-cra": "^1.0.0",
     "debounce": "^1.2.0",
@@ -20,6 +21,7 @@
     "react-countdown": "^2.2.1",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.0",
     "react-fastclick": "^3.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
@@ -33,7 +35,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start --no-cache",
-    "build": "CI= GENERATE_SOURCEMAP=false react-app-rewired build",
+    "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
