--- a/www/package.json
+++ b/www/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "homepage": "https://many.global",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "@types/debounce": "^1.2.0",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.11.8",
@@ -18,13 +18,15 @@
     "numeral": "^2.0.6",
     "react": "^16.13.1",
     "react-circular-progressbar": "^2.0.3",
+    "react-coming-soon": "^1.0.6",
     "react-countdown": "^2.2.1",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
     "react-fastclick": "^3.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^3.4.4",
+    "react-vertical-timeline-component": "^3.3.1",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7",
     "use-wallet": "^0.8.0",
@@ -34,8 +36,8 @@
     "web3-utils": "^1.3.0"
   },
   "scripts": {
-    "start": "react-app-rewired start --no-cache",
-    "build": "react-app-rewired build",
+    "start": "react-scripts --max_old_space_size=4096 start",
+    "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
@@ -56,6 +58,7 @@
     "@types/numeral": "0.0.28",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-vertical-timeline-component": "^3.0.0",
     "@types/styled-components": "^5.1.2",
     "babel-eslint": "10.x",
     "eslint-config-airbnb": "^18.2.0",
